--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               <h3>
                 <a href="https://lumpyspayzprincess.github.io/project-1/">Souldoku</a>
                  |
-                <a href="https://github.com/lumpyspayzprincess/project-1/blob/main/README.md" target="_blank">Readme</a>
+                <a href="https://github.com/lumpyspayzprincess/project-1/tree/main/readme" target="_blank">Readme</a>
               </h3>
             </div>
             <div class="project-card-description">
