--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
               <h3>
                 <a href="https://637d22ece39e7221da53729a--roaring-faloodeh-5cec60.netlify.app/">HP Personality Quiz</a>
  |
-                <a href="https://github.com/lumpyspayzprincess/project-2" target="_blank">Readme</a>
+                <a href="https://github.com/lumpyspayzprincess/project-2/blob/main/readme.md" target="_blank">Readme</a>
               </h3>
             </div>
             <div class="project-card-description">
