--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
               <h3>
                 <a href="https://fitcoin.netlify.app/">Fitcoin</a>
                  |
-            <a href="https://github.com/lumpyspayzprincess/fitcoin-backend/blob/main/README.md"
+            <a href="https://github.com/lumpyspayzprincess/fitcoin-backend"
               target="_blank">Readme</a>
               </h3>
             </div>
