--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
           <div class="project-card-contents">
             <div class="project-card-title">
               <h3>
-                <a href="https://lumpyspayzprincess.github.io/project-1/">Souldoku</a>
+                <a href="https://lumpyspayzprincess.github.io/project-1/" target="_blank">Souldoku</a>
                  |
                 <a href="https://github.com/lumpyspayzprincess/project-1/tree/main/readme" target="_blank">Readme</a>
               </h3>
@@ -511,7 +511,7 @@
           <div class="project-card-contents">
             <div class="project-card-title">
               <h3>
-                <a href="https://637d22ece39e7221da53729a--roaring-faloodeh-5cec60.netlify.app/">HP Personality Quiz</a>
+                <a href="https://637d22ece39e7221da53729a--roaring-faloodeh-5cec60.netlify.app/" target="_blank">HP Personality Quiz</a>
  |
                 <a href="https://github.com/lumpyspayzprincess/project-2/blob/main/readme.md" target="_blank">Readme</a>
               </h3>
@@ -536,9 +536,9 @@
           <div class="project-card-contents">
             <div class="project-card-title">
               <h3>
-                <a href="https://dinspiration.netlify.app/">Dinspiration</a>
+                <a href="https://dinspiration.netlify.app/" target="_blank">Dinspiration</a>
                  |
-                <a href="">Readme</a>
+                <a href="https://github.com/lumpyspayzprincess/dinspiration-backend" target="_blank">Readme</a>
               </h3>
             </div>
             <div class="project-card-description">
@@ -564,7 +564,7 @@
           <div class="project-card-contents">
             <div class="project-card-title">
               <h3>
-                <a href="https://fitcoin.netlify.app/">Fitcoin</a>
+                <a href="https://fitcoin.netlify.app/" target="_blank">Fitcoin</a>
                  |
             <a href="https://github.com/lumpyspayzprincess/fitcoin-backend"
               target="_blank">Readme</a>
