--- a/index.html
+++ b/index.html
@@ -97,26 +97,26 @@
 
           For a few years, I'd been working in Social Media
           Marketing to try something new in my first out-of-uni job.
-
+          <br><br>
           Funnily enough, I was inspired to somehow work in tech after attending Web Summit in Lisbon a few years ago
           while working in Social Media, and decided to work for tech companies in Customer Support to get into tech.
           I took the plunge to self-fund a bootcamp course.
-
+          <br><br>
           After 6 months of pushing myself to work on progressively tougher projects, I
           managed to complete a course which has equipped me with the necessary
           skills to take on new challenges in my next role.
-
+          <br><br>
           For me, engineering bridges the gap between the parts of me that allow me to pick up things quickly and
           problem-solving, with the parts of me that are creative and eager to find solutions that are impactful to
           people's lives.
-
+          <br><br>
           My goal as a junior engineer is to work collaboratively with talented people across all parts of a business to
           gain
           valuable insights, refine my skills, and contribute meaningfully to projects that help people.
-
+          <br><br>
           At the moment, I'm drawn to projects where I could be working on the backend, but I'm open to develop my
           skills in other avenues.
-
+          <br><br>
           The next few years of working as an engineer look exciting! I'll be looking at contributing in open source
           projects and working in hackathons. If you would like to work with me on some projects, please feel free to
           reach out!
@@ -486,7 +486,7 @@
             <div class="project-card-title">
               <h3>
                 <a href="https://lumpyspayzprincess.github.io/project-1/" target="_blank">Souldoku</a>
-                 |
+                |
                 <a href="https://github.com/lumpyspayzprincess/project-1/tree/main/readme" target="_blank">Readme</a>
               </h3>
             </div>
@@ -511,8 +511,9 @@
           <div class="project-card-contents">
             <div class="project-card-title">
               <h3>
-                <a href="https://637d22ece39e7221da53729a--roaring-faloodeh-5cec60.netlify.app/" target="_blank">HP Personality Quiz</a>
- |
+                <a href="https://637d22ece39e7221da53729a--roaring-faloodeh-5cec60.netlify.app/" target="_blank">HP
+                  Personality Quiz</a>
+                |
                 <a href="https://github.com/lumpyspayzprincess/project-2/blob/main/readme.md" target="_blank">Readme</a>
               </h3>
             </div>
@@ -537,7 +538,7 @@
             <div class="project-card-title">
               <h3>
                 <a href="https://dinspiration.netlify.app/" target="_blank">Dinspiration</a>
-                 |
+                |
                 <a href="https://github.com/lumpyspayzprincess/dinspiration-backend" target="_blank">Readme</a>
               </h3>
             </div>
@@ -565,9 +566,8 @@
             <div class="project-card-title">
               <h3>
                 <a href="https://fitcoin.netlify.app/" target="_blank">Fitcoin</a>
-                 |
-            <a href="https://github.com/lumpyspayzprincess/fitcoin-backend"
-              target="_blank">Readme</a>
+                |
+                <a href="https://github.com/lumpyspayzprincess/fitcoin-backend" target="_blank">Readme</a>
               </h3>
             </div>
             <div class="project-card-description">
@@ -586,18 +586,23 @@
         </div>
 
 
-        </div>
+      </div>
       </div>
     </section>
     <section class="Interests" id="4">
       <div class="intro">
         <h2>Interests</h2>
         <div class="article">
-  <li>I looooove hula hooping! I've doing hula hooping for a few years now. I have a couple of tricks up my sleeve!</li>
-  <li>I also try to go to music festivals every summer. This year, I'll be at Glastonbury!</li>
-  <li>I'm big fan or Pilates, and my favourite style is the Reformer. I usually have a class at <a href="https://moveyourframe.com/">Frame</a> once a week.</li>
-  <li>Software engineering is also something that I have a passion in, and I regularly attend conferences and meetups to keep my fingers on the pulse. Recently, I attended the QCon London event, and I'm planning to go to the WeAreDevelopers congress in Berlin later this year.</li>
-  <li>I've been a vegan since 2017, and have been meat-free for more than half my life now. If you know of any good vegan pancake spots, please let me know :)</li>
+          <li>I looooove hula hooping! I've doing hula hooping for a few years now. I have a couple of tricks up my
+            sleeve!</li>
+          <li>I also try to go to music festivals every summer. This year, I'll be at Glastonbury!</li>
+          <li>I'm big fan or Pilates, and my favourite style is the Reformer. I usually have a class at <a
+              href="https://moveyourframe.com/">Frame</a> once a week.</li>
+          <li>Software engineering is also something that I have a passion in, and I regularly attend conferences and
+            meetups to keep my fingers on the pulse. Recently, I attended the QCon London event, and I'm planning to go
+            to the WeAreDevelopers congress in Berlin later this year.</li>
+          <li>I've been a vegan since 2017, and have been meat-free for more than half my life now. If you know of any
+            good vegan pancake spots, please let me know :)</li>
         </div>
       </div>
 
@@ -605,7 +610,7 @@
     <section class="contact-form" id="5"></section>
     <h2>Contact me</h2>
     <div class="form-container">
-      <form action="mailto:jadojutelegan@gmail.com"  enctype="text/plain">
+      <form action="mailto:jadojutelegan@gmail.com" enctype="text/plain">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         <label for="email">Email:</label>
