--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
               <h3>
                 <a href="https://dinspiration.netlify.app/" target="_blank">Dinspiration</a>
                 |
-                <a href="http://bit.ly/40PXsau" target="_blank">Readme</a>
+                <a href="https://github.com/lumpyspayzprincess/dinspiration-backend/tree/main/readme" target="_blank">Readme</a>
               </h3>
             </div>
             <div class="project-card-description">
